--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -287,6 +287,7 @@
   border: 1px solid #ccc;
   padding: 8px;
   font-size: 1.1em;
+  width: 200px;
   font-weight: 350;
   color: black;
   text-align: left;
