--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -124,16 +124,16 @@
   color: black;
   /* border: 2px solid black; /* Set border style */
   height: 630px;
-  margin-bottom:-600px;
-  top: 0;
+  margin-bottom:-570px;
   left: 0;
   margin-left: 50px;
   margin-right: 15px;
   bottom: 0;
+  border-radius: 10px;
   background-color: #F8FAFC;
   border-right: 2px solid lightslategrey;
   z-index: -500;
-  margin-top: 25px;
+  margin-top: 0px;
   width: 300px;
   padding: 20px;
   max-height: 550px;
@@ -236,7 +236,7 @@ transition: background-color 0.3s ease; /* Smooth transition on hover */
 .reportHeaderWrapper{
   display: flex;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 0px;
   justify-content: center; /* Horizontal centering */
 align-items: center; /* Vertical centering */
   margin-bottom: 20px;
