logic and visual updates

--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -35,6 +35,7 @@
 .processTablesWrapper2{
   display: flex;
   margin-left: 100px;
+  margin-top: 0px;
   transform: scale(0.8); /* Zoom out by 67% */
 }
 
