--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -63,6 +63,13 @@
   margin-left: 100px;
 }
 
+.elementTitle18{
+  margin-left: 1400px;
+  font-size: 22px;
+
+  margin-top: -70px;
+}
+
 
 .elementTitle11{
   font-size: 20px;
