coming after the width now

--- a/frontend/my-react-app/src/Footer.css
+++ b/frontend/my-react-app/src/Footer.css
@@ -13,7 +13,7 @@
 
 #root {
   /* Your CSS styles for the element with id="root" go here */
-  background-color: lightgrey;
+  background-color: #001522;
   height: 100%;
   margin-top: 00px;
   /* Add more styles as needed */
