--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -453,7 +453,7 @@
 
 
 .ribbon-button {
-  background-color: #aedff7; /* Soft pastel blue color */
+  background-color: blanchedalmond; /* Soft pastel blue color */
   border: 2px solid grey;
   color: black;
   transition: background-color 0.3s ease; /* Smooth transition on hover */
