--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -48,7 +48,13 @@
   margin-bottom: 20px;
 }
 
-
+.elementTitle19{
+  font-size: 20px;
+  color: white;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  margin-left: 100px;
+}
 .elementTitle5{
   font-size: 22px;
   color: white;
@@ -59,6 +65,7 @@
 
 .elementTitle9{
   font-size: 20px;
+  color: black;
   margin-top: 25px;
   margin-bottom: 10px;
   margin-left: 100px;
