--- a/frontend/my-react-app/src/PrototypeHeader.css
+++ b/frontend/my-react-app/src/PrototypeHeader.css
@@ -18,7 +18,7 @@
   right: 0;
   border-right: solid white 1.5px;
 
-  padding-bottom: 50px;
+  padding-bottom: 20px;
   z-index: 500;
   background-color: #F8FAFC;
   width: 145%;
@@ -33,7 +33,6 @@
   background-color: #F8FAFC;
   color: black;
   /* border: 2px solid black; /* Set border style */
-  border-top: 2px solid lightslategrey;
   border-bottom: 2px solid lightslategrey;
   padding: 10px;
   display: flex;
@@ -41,24 +40,21 @@
   justify-content: space-between;
   align-items: center;
   position: absolute;
-  margin-top: 260px;
+  margin-top: 255px;
   margin-bottom: 15px;
   margin-left:0px;
   margin-right:5px;
   top: 0;
   left: 0;
   right: 0;
-  background-color: #F8FAFC;
+  background-color: #001522;
   transition: box-shadow 0.3s ease; /* Smooth transition on hover */
-
   width: 145%;
 }
 
 .prototype-header2:hover {
-  background-color: #F8FAFC;
   color: black;
   /* border: 2px solid black; /* Set border style */
-  border-top: 2px solid lightslategrey;
   border-bottom: 2px solid lightslategrey;
   padding: 10px;
   display: flex;
@@ -66,17 +62,16 @@
   justify-content: space-between;
   align-items: center;
   position: absolute;
-  margin-top: 260px;
+  margin-top: 255px;
   margin-bottom: 15px;
   margin-left:0px;
   margin-right:5px;
   top: 0;
   left: 0;
   transition: box-shadow 0.3s ease; /* Smooth transition on hover */
-  box-shadow: 290px 10px 0 #003366; /* Add a shadow to the right and bottom */
-
+  box-shadow: 20px 10px 0 #003366; /* Add a shadow to the right and bottom */
   right: 0;
-  background-color: #F8FAFC;
+  background-color: #001522;
   width: 145%;
 }
 
@@ -136,8 +131,9 @@
 }
 
 .title9{
-  margin-left: 200px;
-  margin-right: -750px;
+  margin-left: 00px;
+  color: white;
+  margin-right: 0px;
 }
 
 .dropdown-button {
@@ -158,7 +154,7 @@
   border: none;
   padding: 10px !important;
   cursor: pointer;
-  background-color: powderblue;
+  background-color: #556B2F; /* Green color */
   padding: 10px;
   border-radius: 2px;
   margin-left: 10px;
@@ -187,12 +183,12 @@
   margin-left: -170px;
 }
 
-.button-wrap3{
-
+.button-wrap3 {
   display: flex;
-  margin-left: 100px;
+  justify-content: center; /* Align items horizontally in the center */
+  align-items: center; /* Align items vertically in the center */
+  margin-left: 00px; /* Adjust as needed */
 }
-
 
 .title{
   font-size: 14px;
