--- a/frontend/my-react-app/src/PipelineSideMenu.css
+++ b/frontend/my-react-app/src/PipelineSideMenu.css
@@ -152,19 +152,18 @@
   background-color: #556B2F; /* Green color */
 
   padding: 2px;
-  border: .5px solid black; /* Set border style */
   border-radius: 3px;
 }
 
 .pipeline-side-menu li {
   margin-bottom: 10px;
   font-size: 20px;
-  background-color: #556B2F; /* Green color */
+  background-color: #F8FAFC;
+  border-bottom: 1px solid black;
 
   cursor: pointer;
   padding: 10px;
   /* border: .5px solid black; /* Set border style */
-  border-radius: 3px;
 }
 
 
@@ -173,7 +172,8 @@
   font-size: 20px;
   cursor: pointer;
   padding: 10px;
-  background-color: floralwhite;
+  color: white;
+  background-color: #556B2F; /* Green color */
   /* border: .5px solid black; /* Set border style */
   border-radius: 3px;
 }
@@ -183,7 +183,9 @@
   font-size: 20px;
   cursor: pointer;
   padding: 10px;
-  background-color: #556B2F; /* Green color */
+  background-color: #F8FAFC;
+  border-bottom: 1px solid black;
+
   /* border: .5px solid black; /* Set border style */
   border-radius: 3px;
 }
@@ -193,7 +195,9 @@
   font-size: 20px;
   cursor: pointer;
   padding: 10px;
-  background-color: floralwhite;
+  color: white;
+  
+  background-color: #556B2F; /* Green color */
   /* border: .5px solid black; /* Set border style */
   border-radius: 3px;
 }
@@ -204,10 +208,25 @@
   font-size: 20px;
   cursor: pointer;
   padding: 10px;
-  background-color: #556B2F; /* Green color */
+  color: black;
+  background-color: #F8FAFC;
+  border-bottom: 1px solid black;
   /* border: .5px solid black; /* Set border style */
   border-radius: 3px;
 }
+
+.pipeline-side-menu2 li:hover {
+  margin-bottom: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  color: white;
+  background-color: #556B2F; /* Green color */
+  border-bottom: 1px solid black;
+  /* border: .5px solid black; /* Set border style */
+  border-radius: 3px;
+}
+
 
 .sidemenu-title {
   margin-top: -15px;
