last color change now we do more logic and tab stuff

--- a/frontend/my-react-app/src/PrototypeHeader.css
+++ b/frontend/my-react-app/src/PrototypeHeader.css
@@ -114,6 +114,7 @@
 
 .selected-tab{
   background-color: skyblue !important;
+  color: black !important;
 }
 
 
@@ -158,7 +159,7 @@
   padding: 10px;
   border-radius: 2px;
   margin-left: 10px;
-  color: black;
+  color: white;
   transition: background-color 0.3s ease; /* Smooth transition on hover */
 
   display: flex;
