--- a/frontend/my-react-app/src/PrototypeSideMenu.css
+++ b/frontend/my-react-app/src/PrototypeSideMenu.css
@@ -302,6 +302,12 @@ width: 1050px;
   /* border: .5px solid black; /* Set border style */
 }
 
+
+.easyWrap{
+    display: run-in;
+}
+
+
 .prototype-side-menu6 li:hover {
   margin-bottom: 10px;
   font-size: 20px;
@@ -347,6 +353,18 @@ width: 1050px;
 
 .easy{
   display: flex;
+  font-size: 20px;
+  border-bottom: 1px dashed black;
+  padding: 5px;
+  margin-left: 10px;
+  font-weight: 250;
+}
+
+.easy3{
+  display: flex;
+  font-size: 22px;
+  border-bottom: 1px dashed black;
+  padding: 5px;
   margin-left: 10px;
   font-weight: 250;
 }
