--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -26,6 +26,33 @@
 
 }
 
+.xlsx-table4 {
+  margin-top: 0px;
+  border-bottom: 2px solid #3498db; /* Border color */
+  border-right: 2px solid #3498db; /* Border color */
+  top: 0;
+  padding: 5px;
+  display: inline-block;
+  margin-left: 0px;
+  max-width: 1600px;
+  max-height: 400px;
+  margin-bottom: 00px;
+  border-radius: 10px !important;
+  overflow-x: auto;
+  background-color: #F8FAFC;
+  border-collapse: separate;
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+  box-shadow: 10px 10px 0 #003366; /* Add a shadow to the right and bottom */
+
+  border-radius: 10px !important;
+}
+
+.xlsx-table4:hover {
+  box-shadow: 20px 20px 0 #003366; /* Add a shadow to the right and bottom */
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
+}
+
 
 .processTablesWrapper{
   display: flex;
@@ -324,7 +351,37 @@
 
 }
 
-.xlsx-table2 td[contentEditable="true"]:focus {
+.xlsx-table4 td[contentEditable="true"]:focus {
+  outline: none;
+  border: 1px solid #007bff;
+  color: black;
+  background-color: #fff;
+  box-shadow: 0 0 5px #003366;
+
+}
+
+.xlsx-table4 th, .xlsx-table td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  font-size: 1.1em;
+  width: 200px;
+  font-weight: 350;
+  color: black;
+  text-align: left;
+}
+
+.xlsx-table4 th {
+  background-color: #f0f0f0;
+  color: black;
+  font-weight: 350;
+}
+
+.xlsx-table4 td {
+  background-color: #ffffff;
+
+}
+
+.xlsx-table4 td[contentEditable="true"]:focus {
   outline: none;
   border: 1px solid #007bff;
   color: black;
