--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -4,6 +4,8 @@
   margin-top: 50px;
   background-size: 30%; /* Adjust the percentage as needed for the desired zoom level */
   background-color: #001522;
+  /* background: url('blue.png') repeat;
+  background-position: right 50px top 60px; */
   /* background-image: url('./backgroundImageHomepage.png'); /* Corrected syntax with url() */
 }
 /* Media query for mobile devices */
@@ -48,6 +50,8 @@
   margin-top: 150px;
   margin-bottom: 100px;
   color: white;
+
+  padding: 20px; /* Adjust padding as needed */
 }
 @media (max-width: 767px) {
   .arriving-text {
@@ -109,6 +113,7 @@
   display: block;
   transition: box-shadow 0.3s ease; /* Smooth transition on hover */
   margin: 20px auto; /* Center the button horizontally */
+  margin-top: 500px;
   cursor: pointer;
 }
 
@@ -123,7 +128,6 @@
   padding: 50px 160px; /* Increase the padding to make it bigger */
   display: block;
   transition: box-shadow 0.3s ease; /* Smooth transition on hover */
-  margin: 20px auto; /* Center the button horizontally */
   cursor: pointer;
 }
 
