--- a/frontend/my-react-app/src/About.css
+++ b/frontend/my-react-app/src/About.css
@@ -14,7 +14,10 @@
 
   color: white;
   margin-bottom: 40px;
+  margin-right: 20px;
+  margin-left: 20px;
 }
+
 
 @media (max-width: 767px) {
   .center-div {
