import export modals added

--- a/frontend/my-react-app/src/Timeline.css
+++ b/frontend/my-react-app/src/Timeline.css
@@ -1,7 +1,7 @@
 /* Timeline.css */
 .timeline-title {
   font-size: 32px;
-  color: black;
+  color: white;
   margin-top: 150px;
   opacity: 0.95;
 }
