some smoother overlay process no breaks

--- a/frontend/my-react-app/src/Prototype.css
+++ b/frontend/my-react-app/src/Prototype.css
@@ -206,7 +206,7 @@
   margin-right: 5px;
   background-color: #001522;
   display: grid;
-  width: 1878px;
+  width: 105%;
   margin-bottom: -320px;
   bottom: 0;
   border-radius: 10px;
