--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -88,8 +88,39 @@
   margin-left: -100px;
 }
 
+.notes{
+  padding-left: 10px;
+
+}
+
+.elementDetailWrap{
+  margin-left: 40px;
+  margin-top: -40px;
+}
+
+.notes2{
+  padding-left: 10px;
+
+}
+
+.notes3{
+  padding-left: 20px;
+  margin-left: 5px;
+}
+.ontologyheader{
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.ontologyheader2{
+  display: flex;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
 .elementTitle10{
   font-size: 20px;
+  color: white;
   margin-top: 40px;
   margin-bottom: 10px;
   margin-left: 100px;
